[package]
name = "empy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "em"
crate-type = ["cdylib"]

[dependencies]
num-integer = "0.1.44"
num-bigint = "0.4.3"

[dependencies.em]
path = "../em"

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module", "num-bigint"]
